<resources>
    <string name="app_name">NLM Malaria Screener</string>
    <string name="action_settings">Settings</string>
    <string name="action_tutorial">User Manual</string>
    <string name="action_diagram">System Diagram</string>
    <string name="action_about">About</string>
    <string name="search_title">Search</string>
    <string name="search_hint">search patient</string>
    <string name="begin_capture">Start a New Session</string>
    <string name="app_name_bar">&#160;NLM Malaria Screener</string>
    <string name="title_patient_info">Patient Info</string>
    <string name="title_slide_info">Slide Info</string>
    <string name="title_database">Database</string>
    <string name="title_summary">Summary Report</string>
    <string name="title_result">Result</string>
    <string name="title_patient_graph">Graph</string>
    <string name="title_slide_infoDB">Slide Info</string>
    <string name="title_slide_logDB">Slides</string>
    <string name="title_setting">Settings</string>
    <string name="title_tutorial">User Manual</string>
    <string name="title_about">About</string>
    <string name="title_upload">Upload</string>
    <string name="title_register">Register</string>
    <string name="title_image_view">Slide Images</string>
    <string name="title_manual_counts">Manual Counts</string>
    <string name="prompt_email">Patient ID</string>
    <string name="prompt_password">Gender</string>
    <string name="action_sign_in">Complete</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="stainingmethod1">Giemsa</string>
    <string name="stainingmethod2">Field\'s</string>
    <string name="category1">CAMERA</string>
    <string name="whitebalance">White Balance</string>
    <string name="classifier">Classifier Type</string>
    <string name="classifierT">Deep Learning</string>
    <string name="wbsum">Auto</string>
    <string name="imagequality">Compression Level</string>
    <string name="imgquality">Set the compression level of the image data from camera. It can be from 0 to 9. A higher value means a smaller size and longer compression time. Default value is 3.</string>
    <string name="exposure">Exposure Compensation</string>
    <string name="EC">Adjust the light exposure level.</string>
    <string name="category2">OTHERS</string>
    <string name="Sensitivity_level_title">Sensitivity Level</string>
    <string name="Classifier_Th_summary">Adjust classifier sensitivity level. Default value for DL:50. Default value for SVM:35.</string>
    <string name="Classifier_Th_summary_thick">Adjust classifier sensitivity level. Default value :50.</string>
    <string name="celltotal">Total Cells Needed</string>
    <string name="celltotal_summary">Number of Cells that should be counted for each patient. Default value: 1000</string>
    <string name="wbc_required">Total WBC Needed</string>
    <string name="wbc_required_summary">Number of white blood cells that should be counted for each patient. Default value: 200</string>
    <string name="home">Step 1. Start a new session</string>
    <string name="camera">Step 2. Capture blood film image</string>
    <string name="preview">Step 3. Review the captured image</string>
    <string name="result">Step 4. Review result</string>
    <string name="input">Step 5. Input patient and slide info</string>
    <string name="summary">Step 6. Final step: Review summary</string>
    <string name="database1">Database</string>
    <string name="database2">Database: Patient page</string>
    <string name="database3">Database: Slide page</string>
    <string name="manual_counts_1">Enter manual counts - Option 1: During a session</string>
    <string name="manual_counts_2">Enter manual counts - Option 1: During a session</string>
    <string name="manual_counts_3">Enter manual counts - Option 2: In database</string>
    <string name="manual_counts_4">Enter manual counts - Option 2: In database</string>
    <string name="manual_counts_5">Enter manual counts - Option 2: In database</string>
    <string name="upload_1">Upload - Step 1. Enter upload page</string>
    <string name="upload_2">Upload - Step 2. Consent registration</string>
    <string name="upload_3">Upload - Step 3. Registration</string>
    <string name="upload_4">Upload - Step 4. Upload and Finish</string>
    <string name="setting">Others: Settings</string>
    <string name="crash">Others: Unsaved files</string>
    <string name="version">Version: </string>
    <string name="description">NLM Malaria Screener is an R&amp;D project of the Lister Hill National Center of Biomedical Communications, a division of the National
    Library of Medicine (NLM), part of the National Institutes of Health (NIH), in collaboration with Mahidol University, University of Oxford, and University of Missouri.</string>
    <string name="personnel"><b>NIH Researchers:</b>\nStefan Jaeger (Project Lead)\nFeng Yang\nHang Yu\nSema Candemir\nMike Chung\nSameer Antani\nGeorge Thoma (Project Sponsor, NLM)\nAbhisheka Bansal (NIAID)
        \nRick Fairhurst (NIAID)\n\n<b>Extramural Researchers:</b>\nKamolrat Silamut (Mahidol University, Thailand)\nRichard Maude (University of Oxford, UK)
        \nKannappan Palaniappan (University of Missouri)\nIlker Ersoy (University of Missouri)\nMahdieh Poostchi (University of Missouri)
        \n\n<b>NLM Interns:</b>\nAndrew Powell\nKatie McMenamin\nNila Palaniappan\nWilson Lin\nPaul LoBuglio</string>
    <string name="thanks">We would like to thank the Laboratory of Malaria and Vector Research at the National Institute of Allergy and Infectious Diseases
        for their help and support. In particular, we would like to thank Chanaki Amaratunga, Louis Miller, and Thomas Wellems. We also appreciate the help of
        Emile Gordon and Susan Pierce at the Laboratory of Immunogenetics.</string>
    <string name="contact"><b>Contact</b>\nEmail: stefan.jaeger@nih.gov\n</string>
    <string name="delete"><font fgcolor="#e64444">Confirm Delete...</font></string>
    <string name="abort"><font fgcolor="#e64444">Confirm Abort...</font></string>
    <string name="warning"><font fgcolor="#e64444">CAUTION</font></string>
    <string name="gender">Gender <font fgcolor="#e64444">Gender can not be empty!</font></string>
    <string name="update"><font fgcolor="#e64444">Update</font></string>
    <string name="language_setting">Language</string>
    <string name="language_dialog_title">Language Setting</string>
    <string name="language_dialog_message">Select your language</string>
    <string name="perm_denied">Permission denied.\nYou need to grant all permissions to use this app. </string>
    <string name="unsaved_title">Unsaved files...</string>
    <string name="unsaved_message">You have unsaved files from a previous unfinished session</string>
    <string name="unsaved_moved">Files saved to Extras folder</string>
    <string name="unsaved_deleted">Unsaved files removed</string>
    <string name="save">save</string>
    <string name="delete1">delete</string>
    <string name="smear_type">Smear Type: Thin</string>
    <string name="smear_type1">Smear Type: Thick</string>
    <string name="image_count">Images:\u0020</string>
    <string name="cell_count">Cells:\u0020</string>
    <string name="infected_count">Infected Cells:\u0020</string>
    <string name="parasite_count">Parasites:\u0020</string>
    <string name="wbc_count">WBCs:\u0020</string>
    <string name="image_process1">Running...</string>
    <string name="image_process2">Please wait</string>
    <string name="seg_failed">Segmentation failed due to bad image quality, please recapture another image!</string>
    <string name="no_cam">No camera found on this device!</string>
    <string name="patient_info">Patient Info</string>
    <string name="slide_info">Slide Info</string>
    <string name="more_info">More Info</string>
    <string name="slide_id_exist">Slide ID already exists!</string>
    <string name="slide_id_empty">Slide ID can not be empty!</string>
    <string name="date_empty">Date can not be empty!</string>
    <string name="time_empty">Time can not be empty!</string>
    <string name="site_empty">Site can not be empty!</string>
    <string name="slide_pre_empty">Slide preparer can not be empty!</string>
    <string name="microscopist_empty">Microscopist can not be empty!</string>
    <string name="hct_empty">HCT can not be empty!</string>
    <string name="slide_id">Slide ID<font fgcolor="#e64444">*</font></string>
    <string name="slide_id_db">Slide ID</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="site">Site</string>
    <string name="slide_result">Result</string>
    <string name="slide_pre">Slide Preparer</string>
    <string name="microscopist">Microscopist</string>
    <string name="staining">Staining method</string>
    <string name="hct">HCT(%)</string>
    <string name="infected_manual">Infected Cells Manual Count(optional)</string>
    <string name="total_manual">Total Cells Manual Count(optional)</string>
    <string name="gender1">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="patient_id_empty">Patient ID can not be empty!</string>
    <string name="initial_empty">Initial can not be empty!</string>
    <string name="age_empty">Age can not be empty!</string>
    <string name="pid_exist">Patient ID already exists!</string>
    <string name="initial_are_letters">Initial has to be letters!</string>
    <string name="no_resultDB">No result from database.</string>
    <string name="patient_id">Patient ID<font fgcolor="#e64444">*</font></string>
    <string name="initial">Initials</string>
    <string name="age">Age</string>
    <string name="continue_button">Continue</string>
    <string name="finish_button">Finish</string>
    <string name="enough_cells">Enough cells collected for this patient.</string>
    <string name="enough_wbcs">Enough WBCs collected for this patient.</string>
    <string name="original_image_switch">Tap for original image</string>
    <string name="result_image_switch">Tap for result image</string>
    <string name="cells">Cells</string>
    <string name="infectedcells">Potential Infected Cell</string>
    <string name="parasites">Potential Parasite</string>
    <string name="wbcs">WBCs</string>
    <string name="register">Register</string>
    <string name="register_message">You need to register with NIH before using the Upload function. Do you want to register?</string>
    <string name="register_cancel">Register canceled</string>
    <string name="export">Export Database</string>
    <string name="fill_in">Fill in the following fields (* - mandatory). Scroll down for more fields.</string>
    <string name="first_name1">First Name *</string>
    <string name="last_name1">Last Name *</string>
    <string name="email1">Email Address *</string>
    <string name="organization1">Organization *</string>
    <string name="department1">Department *</string>
    <string name="address1">Address line 1 *</string>
    <string name="address2">Address line 2</string>
    <string name="city1">City *</string>
    <string name="zip_code1">Zip Code *</string>
    <string name="country1">Country *</string>
    <string name="show_graph">Show Graph</string>
    <string name="id">ID</string>
    <string name="delete_db">DELETE DATABASE</string>
    <string name="thin">Thin</string>
    <string name="thick">Thick</string>
</resources>