<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="category1_key"
        android:title="@string/category1">
        <ListPreference
            android:defaultValue="0"
            android:key="whitebalance"
            android:summary="@string/wbsum"
            android:title="@string/whitebalance" />

        <gov.nih.nlm.malaria_screener.custom.SeekBarPreference_Exposure
            android:defaultValue="0"
            android:key="exposure_compensation"
            android:summary="@string/EC"
            android:title="@string/exposure"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="category2_key"
        android:title="@string/category2">
        <ListPreference
            android:defaultValue="0"
            android:key="classifier"
            android:summary="@string/classifierT"
            android:title="@string/classifier" />

        <gov.nih.nlm.malaria_screener.custom.SeekBarPreference
            android:defaultValue="50"
            android:key="Th"
            android:summary="@string/SVM_Th_summary"
            android:title="@string/SVM_Th"/>

        <gov.nih.nlm.malaria_screener.custom.SeekBarPreference_CellNeeded
            android:defaultValue="1000"
            android:key="celltotal"
            android:summary="@string/celltotal_summary"
            android:title="@string/celltotal"/>

        <SwitchPreference
            android:key="image_acquire"
            android:summary="This mode allows user to capture and save images without processing them."
            android:title="Image Acquisition Mode"/>

    </PreferenceCategory>


</PreferenceScreen>