<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="category1_key"
        android:title="@string/category1">
        <!--<ListPreference
            android:defaultValue="0"
            android:key="whitebalance"
            android:summary="@string/wbsum"
            android:title="@string/whitebalance" />-->

        <gov.nih.nlm.malaria_screener.custom.SeekBarPreference_Exposure
            android:defaultValue="0"
            android:key="exposure_compensation"
            android:summary="@string/EC"
            android:title="@string/exposure"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="category2_key"
        android:title="@string/category2">

        <gov.nih.nlm.malaria_screener.custom.SeekBarPreference_WBCNeeded
            android:defaultValue="200"
            android:key="wbc_th"
            android:summary="@string/wbc_required_summary"
            android:title="@string/wbc_required"/>

        <SwitchPreference
            android:key="image_acquire"
            android:title="Image Acquisition Mode"
            android:summary="This mode allows user to capture and save images without processing them."/>


    </PreferenceCategory>


</PreferenceScreen>