<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="gov.nih.nlm.malaria_screener.MainActivity">
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />-->

    <item android:id="@+id/action_tutorial" android:title="@string/action_tutorial"
        android:orderInCategory="1" app:showAsAction="never" />

    <item android:id="@+id/action_diagram" android:title="@string/action_diagram"
        android:orderInCategory="2" app:showAsAction="never" />

    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="3" app:showAsAction="never" />

    <item
        android:id="@+id/action_change_language"
        android:orderInCategory="4"
        android:title="@string/language_setting"
        app:showAsAction="never"/>


</menu>
