<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/navigate_bar_about"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:background="#1F568a"
            android:textAlignment="center"></androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/navigate_bar_about"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/app_name"
            android:textColor="#1F568a"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/version" />

        <TextView
            android:id="@+id/textView_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_version"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="45dp"
            android:text="@string/description" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_logo"
            android:layout_below="@+id/textView_description"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:src="@drawable/logo"/>

        <TextView
            android:id="@+id/textView_personnel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView_description"
            android:layout_below="@+id/imageView_logo"
            android:layout_marginTop="25dp"
            android:text="@string/personnel" />

        <TextView
            android:id="@+id/textView_thanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView_description"
            android:layout_below="@+id/textView_personnel"
            android:layout_marginTop="30dp"
            android:text="@string/thanks" />

        <TextView
            android:id="@+id/textView_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView_description"
            android:layout_below="@+id/textView_thanks"
            android:layout_marginTop="20dp"
            android:text="@string/contact" />

    </RelativeLayout>

</ScrollView>